Changes in version 2024.9.23

- atime_pkg_test_info returns un-evaluated calls to atime_versions, to make it easier to run one test at a time.
- atime_versions result list contains bench.seconds and install.seconds, to compare how much time is spent in each step.

Changes in version 2024.8.11

- atime_test_list evaluates any arguments that are copied to each test, except setup and expr.

Changes in version 2024.8.8

- plot.references_best now only adds geom_hline if there is at least one row with unit=="seconds" in measurements or plot.references.

Changes in version 2024.8.7

- list returned by references_best contains new element "plot.references" which was previously computed in plot method, and now can be changed by user, to customize the references shown by plot method.

Changes in version 2024.7.12

- atime_versions has default_N(), same as atime.

Changes in version 2024.5.17

- atime_versions_exprs better error message, one instance of pkg:: (two colons instead of one), thanks @MichaelChirico for the suggestion.

Changes in version 2024.4.23

- Fix test-CRAN.R: kilobytes is not available on some systems.
- added atime_test and atime_test_list for convenience in test definitions.
- atime_versions_exprs now errors if expr has no Package: in code.

Changes in version 2024.4.17

- New, simpler method for defining additional units to analyze (other than kilobytes and seconds): if result is data frame with 1 row, numeric columns are used as additional units. Arguments unit.col.vec and more.units have been removed from references_best.
- atime_pkg version names HEAD/base/CRAN defined in R color names are now translated to their expanded names on the plot (CRAN=1.15.0 etc), and default colors were added for Slow and Fast.

Changes in version 2024.4.12

- atime_pkg gains tests.dir arg, thanks @MichaelChirico for the suggestion.
- atime no longer keeps memory column (sometimes too large) from bench::mark.

Changes in version 2024.3.5
